Bug 1255167 - Default destructuring arguments should show up as lexical dependencies; r=jorendorff

--HG--
extra : rebase_source : 88d9870638eb5565410a5acc23c19f119e56a117